# emulato-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/chip8/: commandline.rs  cpu.rs  display.rs  fonts.rs  memory.rs  mod.rs  research.md
src/game_boy/: boot_rom.rs  cartridge.rs  commandline.rs  cpu.rs  display.rs  emulator_window.rs  graphics_data.rs  io.rs  memory.rs  mod.rs  ppu.rs  research.md  timer.rs
src/nes/: research.md
tests/: gameboy.rs
