[package]
name = "emulato-rs"
version = "0.1.0"
authors = ["Felix Gruber <felgru@posteo.net>"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["cargo"] }
minifb = "0.28"
rand = "0.9"
rand_chacha = "0.9"
